--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,4 +22,5 @@ jobs:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
 
+      - run: npm run lint
       - run: npm run test
