--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "GPS service for Explorer project",
   "main": "index.js",
   "scripts": {
-    "test": "echo 'TODO: write tests' && exit 0"
+    "start": "node server/index.js",
+    "test": "jest",
+    "lint": "./node_modules/.bin/eslint **/*.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +17,19 @@
   "bugs": {
     "url": "https://github.com/grese/explorer-gps/issues"
   },
-  "homepage": "https://github.com/grese/explorer-gps#readme"
+  "homepage": "https://github.com/grese/explorer-gps#readme",
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "eslint": "^4.19.1",
+    "eslint-plugin-jest": "^21.17.0",
+    "jest": "^23.1.0",
+    "superagent": "^3.8.3",
+    "supertest": "^3.1.0"
+  },
+  "dependencies": {
+    "express": "^4.16.3",
+    "express-winston": "^2.5.1",
+    "winston": "^2.4.3"
+  }
 }
