--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
   "dependencies": {
     "express": "^4.16.3",
     "express-winston": "^2.5.1",
+    "redis": "^2.8.0",
+    "socket.io": "^2.1.1",
     "winston": "^2.4.3"
   }
 }
