--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,13 +14,47 @@ jobs:
           keys:
           - v1-dependencies-{{ checksum "package.json" }}
           - v1-dependencies-
-
-      - run: npm install
-
+      - run:
+          name: Install
+          command: npm install
       - save_cache:
           paths:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
+      - run:
+          name: Lint
+          command: npm run lint
+      - run:
+          name: Unit Tests
+          command: npm run test
+  
+  deploy:
+      - run:
+          name: Install AWSCLI
+          command: sudo pip install awscli
+      - run:
+          name: Removing Development Dependencies
+          command: npm prune --production
 
-      - run: npm run lint
-      - run: npm run test
+      - run:
+          name: Creating zip file
+          command: zip ~/explorer-gps.zip *
+      
+      - run:
+          name: Deploy zip to S3
+          command: aws s3 cp ~/explorer-gps.zip s3://explorer-deploy/explorer-gps/explorer-gps.zip
+      
+workflows:
+  version: 2
+  build:
+    jobs:
+      - build
+  build-deploy:
+    jobs:
+      - build
+      - deploy:
+          requires:
+            - build
+          filters:
+            branches:
+              only: master
