--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,24 +26,24 @@ jobs:
       - run: npm run lint
       - run: npm run test
 
-  # deploy:
-  #     - run: sudo pip install awscli
-  #     - run: npm prune --production
-  #     - run: zip ~/explorer-gps.zip *
-  #     - run: aws s3 cp ~/explorer-gps.zip s3://explorer-deploy/explorer-gps/explorer-gps.zip
+  deploy:
+      - run: sudo pip install awscli
+      - run: npm prune --production
+      - run: zip ~/explorer-gps.zip *
+      - run: aws s3 cp ~/explorer-gps.zip s3://explorer-deploy/explorer-gps/explorer-gps.zip
 
-# workflows:
-#   version: 2
-#   build:
-#     jobs:
-#       - build
+workflows:
+  version: 2
+  build:
+    jobs:
+      - build
 
-#   build-deploy:
-#     jobs:
-#       - build
-#       - deploy:
-#           requires:
-#             - build
-#           filters:
-#             branches:
-#               only: master
+  build_and_deploy:
+    jobs:
+      - build
+      - deploy:
+          requires:
+            - build
+          filters:
+            branches:
+              only: master
