--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,18 +32,18 @@ jobs:
       - run: zip ~/explorer-gps.zip *
       - run: aws s3 cp ~/explorer-gps.zip s3://explorer-deploy/explorer-gps/explorer-gps.zip
 
-workflows:
-  version: 2
-  build:
-    jobs:
-      - build
+# workflows:
+#   version: 2
+#   build:
+#     jobs:
+#       - build
 
-  build_and_deploy:
-    jobs:
-      - build
-      - deploy:
-          requires:
-            - build
-          filters:
-            branches:
-              only: master
+#   build_and_deploy:
+#     jobs:
+#       - build
+#       - deploy:
+#           requires:
+#             - build
+#           filters:
+#             branches:
+#               only: master
