--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,23 +27,31 @@ jobs:
       - run: npm run test
 
   deploy:
-      - run: sudo pip install awscli
-      - run: npm prune --production
-      - run: zip ~/explorer-gps.zip *
-      - run: aws s3 cp ~/explorer-gps.zip s3://explorer-deploy/explorer-gps/explorer-gps.zip
+      machine:
+        enabled: true
 
-# workflows:
-#   version: 2
-#   build:
-#     jobs:
-#       - build
+      working_directory: ~/explorer-gps
+      
+      steps:
+        - checkout
 
-#   build_and_deploy:
-#     jobs:
-#       - build
-#       - deploy:
-#           requires:
-#             - build
-#           filters:
-#             branches:
-#               only: master
+        - run: sudo pip install awscli
+        - run: npm prune --production
+        - run: zip ~/explorer-gps.zip *
+        - run: aws s3 cp ~/explorer-gps.zip s3://explorer-deploy/explorer-gps/explorer-gps.zip
+
+workflows:
+  version: 2
+  build:
+    jobs:
+      - build
+
+  build_and_deploy:
+    jobs:
+      - build
+      - deploy:
+          requires:
+            - build
+          filters:
+            branches:
+              only: master
