--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,46 +5,50 @@ jobs:
   build:
     docker:
       - image: circleci/node:8
-
     working_directory: ~/explorer-gps
 
     steps:
       - checkout
-
       - restore_cache:
           keys:
           - v1-dependencies-{{ checksum "package.json" }}
-          - v1-dependencies-
-
-      - run: npm install
-
+          - v1-dependencies-]
+      - run:
+          name: Install (development)
+          command: npm install
       - save_cache:
           paths:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
-
-      - run: npm run lint
-      - run: npm run test
+      - run:
+          name: Lint
+          command: npm run lint
+      - run:
+          name: Unit Tests
+          command: npm run test
 
   deploy:
-      machine:
-        enabled: true
-
+      docker:
+        - image: circleci/node:8
       working_directory: ~/explorer-gps
       
       steps:
         - checkout
-
-        - run: sudo pip install awscli
-        - run: npm prune --production
-        - run: zip ~/explorer-gps.zip *
-        - run: aws s3 cp ~/explorer-gps.zip s3://explorer-deploy/explorer-gps/explorer-gps.zip
+        - run:
+            name: Install AWS CLI
+            command: sudo pip install awscli
+        - run:
+            name: Install (production)
+            command: npm install --production
+        - run:
+            name: Create Package
+            command: zip ~/explorer-gps.zip *
+        - run:
+            name: Deploy to S3
+            command: aws s3 cp ~/explorer-gps.zip s3://explorer-deploy/explorer-gps/explorer-gps.zip
 
 workflows:
   version: 2
-  build:
-    jobs:
-      - build
 
   build_and_deploy:
     jobs:
