--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
           - v1-dependencies-{{ checksum "package.json" }}
           - v1-dependencies-]
       - run:
-          name: Install (development)
+          name: Install
           command: npm install
       - save_cache:
           paths:
@@ -44,7 +44,7 @@ jobs:
             name: Install AWS CLI
             command: sudo apt-get install python-dev build-essential python-pip && sudo pip install awscli
         - run:
-            name: Cleanup dev dependencies
+            name: Prune dependencies
             command: npm prune --production
         - run: ls -la
         - run:
