--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,7 +38,6 @@ jobs:
         - image: circleci/node:8
       working_directory: ~/explorer-gps
 
-      machine: true
       steps:
         - attach_workspace:
             at: ~/
@@ -55,6 +54,14 @@ jobs:
                 ENV_FILE=.env
                 echo "AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID" >> $ENV_FILE
                 echo "AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY" >> $ENV_FILE
+        - run:
+            name: Install Docker client
+            command: |
+                set -x
+                VER="17.03.0-ce"
+                curl -L -o /tmp/docker-$VER.tgz https://download.docker.com/linux/static/stable/x86_64/docker-$VER.tgz
+                tar -xz -C /tmp -f /tmp/docker-$VER.tgz
+                mv /tmp/docker/* /usr/bin
         - run:
             name: Build Docker Container
             command: docker build -t explorer-gps .
