--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -65,7 +65,7 @@ jobs:
                 DOCKER_TAG=latest
                 # Login to AWS
                 aws configure set region $AWS_REGION
-                $(aws ecr get-login)
+                $(aws ecr get-login --no-include-email)
                 # Tag and push docker image
                 docker tag $DOCKER_IMAGE:$DOCKER_TAG $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$DOCKER_IMAGE:$DOCKER_TAG
                 docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$DOCKER_IMAGE:$DOCKER_TAG
