--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -69,6 +69,12 @@ jobs:
                 # Tag and push docker image
                 docker tag $DOCKER_IMAGE:$DOCKER_TAG $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$DOCKER_IMAGE:$DOCKER_TAG
                 docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$DOCKER_IMAGE:$DOCKER_TAG
+        - run:
+            name: Create Package
+            command: zip -r ~/explorer-gps.zip *
+        - run:
+            name: Deploy to S3
+            command: aws s3 cp ~/explorer-gps.zip s3://explorer-source/explorer-gps/explorer-gps.zip
 
 workflows:
   version: 2
