--- a/package.json
+++ b/package.json
@@ -28,8 +28,11 @@
     "supertest": "^3.1.0"
   },
   "dependencies": {
+    "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "express-winston": "^2.5.1",
+    "path": "^0.12.7",
+    "socket.io": "^2.1.1",
     "winston": "^2.4.3"
   }
 }
