--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint": "^4.19.1",
     "eslint-plugin-jest": "^21.17.0",
     "jest": "^23.1.0",
+    "jsdom": "11.11.0",
     "superagent": "^3.8.3",
     "supertest": "^3.1.0"
   },
